--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Redditech</string>
     <string name="auth_url">https://www.reddit.com/api/v1/authorize?client_id=e14xOSvlU0BhmAuhho8z3Q&amp;response_type=token&amp;state=foobarjaaj&amp;redirect_uri=https://localhost:8080/callback&amp;scope=identity%20edit</string>
+
+    <!-- TO FILL : examples -->
+    <string name="home_page_title">Redditech</string>
+    <string-array name="home_page_list">
+        <item>My Item 1</item>
+    </string-array>
 </resources>
