--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,12 @@
     <string name="subreddit_header_def_nb_subscribers">0</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="filter_array">
+        <item>Best</item>
+        <item>Hot</item>
+        <item>New</item>
+        <item>Top</item>
+        <item>Random</item>
+    </string-array>
 </resources>
