--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Redditech</string>
+    <string name="app_title">REDDITECH</string>
     <string name="auth_url">https://www.reddit.com/api/v1/authorize?client_id=e14xOSvlU0BhmAuhho8z3Q&amp;response_type=token&amp;state=foobarjaaj&amp;redirect_uri=https://localhost:8080/callback&amp;scope=identity%20edit%20mysubreddits%20read%20subscribe%20account</string>
 
     <!-- TO FILL : examples -->
-    <string name="home_page_title">Redditech</string>
     <string name="search_subreddit">Search subreddit</string>
     <string-array name="home_page_list">
         <item>My Item 1</item>
@@ -29,7 +29,10 @@
     <string name="subreddit_header_def_nb_subscribers">0</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="app_title">REDDITECH</string>
+    <string name="start_page_button">Login with Reddit</string>
+    <string name="start_page_welcome">Welcome</string>
+    <string name="home_tab_post">Posts</string>
+    <string name="home_tab_subreddit">My subreddits</string>
 
     <string-array name="filter_array">
         <item>Best</item>
