--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="start_page_welcome">Welcome</string>
     <string name="home_tab_post">Posts</string>
     <string name="home_tab_subreddit">My subreddits</string>
+    <string name="subscribe_button">Subscribe</string>
 
     <string-array name="filter_array">
         <item>💯 Best</item>
