--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="pref_third_party_personalized_ads">Third party personalized ads :</string>
     <string name="pref_third_party_site_data_personalized_ads">Third party site data personalized ads:</string>
     <string name="pref_third_party_site_data_personalized_content">Third party site data personalized content:</string>
+    <string name="subreddit_item_subscribers_label">members</string>
 
     <string-array name="filter_array">
         <item>💯 Best</item>
